--- a/invoice.html
+++ b/invoice.html
@@ -3,10 +3,96 @@
    <head>
       <meta charset="utf-8" />
       <title>PDF Template</title>
-      <link rel="stylesheet" href="./style.css">
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-      <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
+      <style>
+        @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400&display=swap");
+        html, body {
+          font-family: 'Roboto', sans-serif !important;
+        }
+        @media print {
+          .quebrar-pagina-depois-daqui {
+              page-break-after: always;
+          }
+        }
+        hr {
+          border: 1px solid #a09e9e;
+        }
+        .box {
+          padding: 60px 80px 60px 80px;
+          position: relative;
+        }
+        .div-logo {
+          float: left;
+        }
+        .div-data {
+          float: right;
+        }
+        .infos-footer hr {
+          margin-bottom: 50px;
+        }
+        .infos-footer p {
+          font-size: 10pt;
+          margin-top: 0px;
+        }
+        .infos-footer span {
+          font-size: 10pt;
+        }
+        .infos-footer div:nth-child(1) {
+          float: left;
+        }
+        .infos-footer div:nth-child(2) {
+          float: right;
+        }
+        .infos-footer div:nth-child(3) {
+          display: block;
+        }
+        .padding-controller {
+          padding-left: 250px;
+        }
+        .imagem-primeira-pagina {
+          position: absolute;
+          left: -7px;
+          top: 230px;
+        }
+        .texto-central {
+          padding: 290px 0px;
+        }
+        .texto-central h1 {
+          color: #235aa8;
+          font-weight: lighter;
+          font-size: 40pt;
+        }
+        
+        /* Segunda página*/
+        .titular {
+          display: flex;
+          flex-flow: column wrap;
+          justify-content: center;
+          height: 100px;
+        }
+
+        .info-wrapper p, .info-wrapper span {
+          display: flex;
+        }
+
+        .info-wrapper {
+          display: flex;
+          align-items: center;
+          justify-content:space-between ;
+          padding: 1px;
+          
+        }
+
+        .info-wrapper span:nth-child(1) {
+          font-weight: bold;
+        }
+
+        .titular hr {
+          display: flex;
+          height: 100%;
+        }
+      </style>
    </head>
+
    <body>
       <div class="box">
          <div class="primeira-pagina quebrar-pagina-depois-daqui">
@@ -58,7 +144,7 @@
                        <span>Telefone</span>
                        <span>(31) 9.8782-3849</span>
                      </div>
-                     <hr/>
+                     <hr />
                      <div class="info-wrapper">
                        <span>Data de Nasc.</span>
                        <span>30.06.1988</span>
