--- a/invoice.html
+++ b/invoice.html
@@ -136,6 +136,16 @@
           padding: 20px;
           margin-bottom: 45px;
         }
+        table th, table td {
+           padding: 5px 30px;
+        }
+        .th-border {
+           border-bottom: 1px solid #a09e9e;
+           position: relative;
+        }
+        .cor-cinza {
+          color: #646365;
+        }
       </style>
    </head>
    <body>
@@ -186,28 +196,28 @@
                   <div class="titular background-cinza">
                      <div class="info-wrapper">
                        <span>Nome</span>
-                       <span>Mateus Nicolau</span>
+                       <span style="color: #646365;">Mateus Nicolau</span>
                      </div>
                      <div class="info-wrapper">
                        <span>Profissão</span>
-                       <span>Corretor de Seguros</span>
+                       <span style="color: #646365;">Corretor de Seguros</span>
                      </div>
                      <div class="info-wrapper">
                        <span>Telefone</span>
-                       <span>(31) 9.8782-3849</span>
+                       <span style="color: #646365;">(31) 9.8782-3849</span>
                      </div>
                      <hr />
                      <div class="info-wrapper">
                        <span>Data de Nasc.</span>
-                       <span>30.06.1988</span>
+                       <span style="color: #646365;">30.06.1988</span>
                      </div>
                      <div class="info-wrapper">
                        <span>Estado Civil</span>
-                       <span>Casado (a)</span>  
+                       <span style="color: #646365;">Casado (a)</span>  
                      </div>
                      <div class="info-wrapper">
                        <span>Abordagem</span>
-                       <span>N/A</span>
+                       <span style="color: #646365;">N/A</span>
                      </div>
                   </div>
                </div>
@@ -218,38 +228,38 @@
                         <thead>
                            <tr>
                               <th></th>
-                              <th></th>
-                              <th>Estudante</th>
-                              <th>Idade</th>
+                              <th class="th-border" style="left: 2px;"></th>
+                              <th class="th-border">Estudante</th>
+                              <th class="th-border" style="left: -2px;">Idade</th>
                            </tr>
                         </thead>
                         <tbody>
                            <tr>
-                              <td>Cônjuge</td>
-                              <td>Karina</td>
-                              <td>Não</td>
-                              <td>29</td>
+                              <td><b>Cônjuge</b></td>
+                              <td class="cor-cinza">Karina</td>
+                              <td class="cor-cinza">Não</td>
+                              <td class="cor-cinza">29</td>
                            </tr>
                            <tr>
-                              <td>Dependente 1</td>
-                              <td>Mateus Jr</td>
-                              <td>Sim</td>
-                              <td>6</td>
+                              <td><b>Dependente 1</b></td>
+                              <td class="cor-cinza">Mateus Jr</td>
+                              <td class="cor-cinza">Sim</td>
+                              <td class="cor-cinza">6</td>
                            </tr>
                            <tr>
-                              <td>Dependente 2</td>
-                              <td>Karina Jr</td>
-                              <td>Sim</td>
-                              <td>4</td>
+                              <td><b>Dependente 2</b></td>
+                              <td class="cor-cinza">Karina Jr</td>
+                              <td class="cor-cinza">Sim</td>
+                              <td class="cor-cinza">4</td>
                            </tr>
                            <tr>
-                              <td>Dependente 3</td>
+                              <td><b>Dependente 3</b></td>
                               <td></td>
                               <td></td>
                               <td></td>
                            </tr>
                            <tr>
-                              <td>Dependente 4</td>
+                              <td><b>Dependente 4</b></td>
                               <td></td>
                               <td></td>
                               <td></td>
@@ -264,29 +274,29 @@
                           <thead>
                              <tr>
                                 <th>R$ 2500,00</th>
-                                <th>DESPESA FIXA SEM EDUCAÇÃO</th>
+                                <th class="cor-cinza" style="font-weight: normal;">DESPESA FIXA SEM EDUCAÇÃO</th>
                              </tr>
                           </thead>
                           <tbody>
                              <tr>
-                                <td>R$ 0,00</td>
-                                <td>EDUC CONJUGE</td>
+                                <td><b>R$ 0,00</b></td>
+                                <td class="cor-cinza">EDUC CONJUGE</td>
                              </tr>
                              <tr>
-                                <td>R$ 980,00</td>
-                                <td>EDUC DEP 1</td>
+                                <td><b>R$ 980,00</b></td>
+                                <td class="cor-cinza">EDUC DEP 1</td>
                              </tr>
                              <tr>
-                                <td>R$ 750,00</td>
-                                <td>EDUC DEP2</td>
+                                <td><b>R$ 750,00</b></td>
+                                <td class="cor-cinza">EDUC DEP2</td>
                              </tr>
                              <tr>
-                                <td>R$ 0,00</td>
-                                <td>EDUC DEP 3</td>
+                                <td><b>R$ 0,00</b></td>
+                                <td class="cor-cinza">EDUC DEP 3</td>
                              </tr>
                              <tr>
-                                <td>R$ 0,00</td>
-                                <td>EDUC DEP 4</td>
+                                <td><b>R$ 0,00</b></td>
+                                <td class="cor-cinza">EDUC DEP 4</td>
                              </tr>
                           </tbody>
                        </table>
