ajustes de espacamento

--- a/invoice.html
+++ b/invoice.html
@@ -118,7 +118,7 @@
           align-items: center;
           justify-content:space-between ;
           padding: 1px;
-          margin-inline: 50px;
+          margin-inline: 12px;
         }
         .info-wrapper span:nth-child(1) {
           font-weight: bold;
@@ -136,8 +136,11 @@
           padding: 20px;
           margin-bottom: 45px;
         }
+        .dependentes, .gastos, .titular {
+         font-size: 10pt;
+        }
         table th, table td {
-           padding: 5px 30px;
+           padding: 0px 30px;
         }
         .th-border {
            border-bottom: 1px solid #a09e9e;
