--- a/src/invoice.html
+++ b/src/invoice.html
@@ -31,7 +31,7 @@
         </tr>
         <tr>
           <td style="display: flex; flex-direction: column; padding: 2px">
-            <span>IPANEMA BEACH</span> <span>IMO: 9663269 APPA: 65.997</span>
+            <span>{{barco.nome}}</span> <span>IMO: 9663269 APPA: 65.997</span>
           </td>
           <td>SSP</td>
           <td>8.000</td>
@@ -44,6 +44,7 @@
         src="https://i.ibb.co/jRVLks4/icon-224x116.png"
         alt="logo rocha"
       />
+
       <table class="table-info">
         <tr>
           <th>LOG</th>
@@ -73,7 +74,37 @@
       </table>
     </section>
     <section id="prancha">
+      <img
+        class="img-boat"
+        src="https://i.ibb.co/JkJcN44/Captura-de-tela-de-2022-01-21-10-35-40.png"
+        alt="imagem navio"
+      />
+
+      <img
+        class="img-bordo"
+        src="https://i.ibb.co/fDYj7pz/Captura-de-tela-de-2022-01-21-10-53-52.png"
+        alt="bordo"
+      />
+
+      <img
+        class="img-estibordo"
+        src="https://i.ibb.co/bWYZNzp/Captura-de-tela-de-2022-01-21-10-53-29.png"
+        alt="estibordo"
+      />
+      <div class="decor">{{barco.nome}}</div>
+
       <table class="table-prancha">
+        <colgroup>
+          <col span="1" style="width: 5%" />
+          <col span="1" style="width: 12%" />
+          <col span="1" style="width: 12%" />
+          <col span="1" style="width: 12%" />
+          <col span="1" style="width: 12%" />
+          <col span="1" style="width: 12%" />
+          <col span="1" style="width: 12%" />
+          <col span="1" style="width: 12%" />
+          <col span="1" style="width: 12%" />
+        </colgroup>
         <tr class="main">
           <th></th>
           <th></th>
