--- a/src/invoice.html
+++ b/src/invoice.html
@@ -1,134 +1,622 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>PDF Template</title>
-    <link rel="stylesheet" href="main.css" />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400&display=swap");
 
-      html,
-      body {
-        font-family: Roboto, sans-serif !important;
-        margin: 0.75rem;
-      }
-    </style>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <title>PDF Template</title>
+  <link rel="stylesheet" href="main.css" />
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400&display=swap");
 
-  <body>
-    <section id="cabecalho">
-      <div class="titulo-container">
-        <span>Relatório operacional:</span>
-        <span>02-01-2022</span>
-      </div>
-      <table class="table-header">
-        <tr>
-          <th>Navio</th>
-          <th>Carga</th>
-          <th>Prioridade</th>
-          <th>Agente</th>
-          <th>Berço</th>
-        </tr>
-        <tr>
-          <td style="display: flex; flex-direction: column; padding: 2px">
-            <span>{{barco.nome}}</span> <span>IMO: 9663269 APPA: 65.997</span>
-          </td>
-          <td>SSP</td>
-          <td>8.000</td>
-          <td>ROCHAMAR</td>
-          <td>211</td>
-        </tr>
-      </table>
-      <img
-        class="img-header"
-        src="https://i.ibb.co/jRVLks4/icon-224x116.png"
-        alt="logo rocha"
-      />
+    html,
+    body {
+      font-family: Roboto, sans-serif !important;
+      margin: 0.75rem;
+    }
+  </style>
+</head>
 
-      <table class="table-info">
-        <tr>
-          <th>LOG</th>
-          <th>Resumo da operação</th>
-          <th>Percentual da descarga concluída</th>
-        </tr>
-        <tr>
-          <td>
-            {{#each logs}}
-            <ul style="font: 9px Roboto; font-weight: 300">
-              <span>{{this.prop}}</span>
-              <span>{{this.value}}</span>
-            </ul>
+<body>
 
-            {{/each}}
-          </td>
-          <td>
-            {{#each resumo}}
-            <ul style="font: 10px Roboto">
-              <span>{{this.prop}}</span>
-              <span>{{this.value}}</span>
-            </ul>
-            {{/each}}
-          </td>
-          <td>{{percentualDescarga}}</td>
-        </tr>
-      </table>
-    </section>
-    <section id="prancha">
-      <img
-        class="img-boat"
-        src="https://i.ibb.co/JkJcN44/Captura-de-tela-de-2022-01-21-10-35-40.png"
-        alt="imagem navio"
-      />
+  <!-- Cabecalho -->
 
-      <img
-        class="img-bordo"
-        src="https://i.ibb.co/fDYj7pz/Captura-de-tela-de-2022-01-21-10-53-52.png"
-        alt="bordo"
-      />
+  <section id="cabecalho">
+    <div class="titulo-container">
+      <span>Relatório operacional:</span>
+      <span>02-01-2022</span>
+    </div>
+    <table class="table-header">
+      <tr>
+        <th>Navio</th>
+        <th>Carga</th>
+        <th>Prioridade</th>
+        <th>Agente</th>
+        <th>Berço</th>
+      </tr>
+      <tr>
+        <td style="display: flex; flex-direction: column; padding: 2px">
+          <span>{{barco.nome}}</span> <span>IMO: 9663269 APPA: 65.997</span>
+        </td>
+        <td>SSP</td>
+        <td>8.000</td>
+        <td>ROCHAMAR</td>
+        <td>211</td>
+      </tr>
+    </table>
+    <img class="img-header" src="https://i.ibb.co/jRVLks4/icon-224x116.png" alt="logo rocha" />
 
-      <img
-        class="img-estibordo"
-        src="https://i.ibb.co/bWYZNzp/Captura-de-tela-de-2022-01-21-10-53-29.png"
-        alt="estibordo"
-      />
-      <div class="decor">{{barco.nome}}</div>
+    <table class="table-info">
+      <tr>
+        <th>LOG</th>
+        <th>Resumo da operação</th>
+        <th>Percentual da descarga concluída</th>
+      </tr>
+      <tr>
+        <td>
+          {{#each logs}}
+          <ul style="font: 9px Roboto; font-weight: 300">
+            <span>{{this.prop}}</span>
+            <span>{{this.value}}</span>
+          </ul>
 
-      <table class="table-prancha">
-        <colgroup>
-          <col span="1" style="width: 5%" />
-          <col span="1" style="width: 12%" />
-          <col span="1" style="width: 12%" />
-          <col span="1" style="width: 12%" />
-          <col span="1" style="width: 12%" />
-          <col span="1" style="width: 12%" />
-          <col span="1" style="width: 12%" />
-          <col span="1" style="width: 12%" />
-          <col span="1" style="width: 12%" />
-        </colgroup>
-        <tr class="main">
-          <th></th>
-          <th></th>
-          <th>porão #1</th>
-          <th>porão #2</th>
-          <th>porão #3</th>
-          <th>porão #4</th>
-          <th>porão #5</th>
-          <th>porão #6</th>
-          <th>Somatório</th>
-        </tr>
-        <tr class="sub">
-          <td></td>
-          <td>Plano de descarga</td>
-          {{#each descargaPorao}}
-          <td>{{this}}</td>
           {{/each}}
-        </tr>
-        {{#each dadosPrancha}}
-        <tr class="dados">
-          {{{this}}}
-        </tr>
+        </td>
+        <td>
+          {{#each resumo}}
+          <ul style="font: 10px Roboto">
+            <span>{{this.prop}}</span>
+            <span>{{this.value}}</span>
+          </ul>
+          {{/each}}
+        </td>
+        <td>{{percentualDescarga}}</td>
+      </tr>
+    </table>
+  </section>
+
+  <!-- Prancha -->
+
+  <section id="prancha">
+    <img class="img-boat" src="https://i.ibb.co/JkJcN44/Captura-de-tela-de-2022-01-21-10-35-40.png"
+      alt="imagem navio" />
+
+    <img class="img-bordo" src="https://i.ibb.co/fDYj7pz/Captura-de-tela-de-2022-01-21-10-53-52.png" alt="bordo" />
+
+    <img class="img-estibordo" src="https://i.ibb.co/bWYZNzp/Captura-de-tela-de-2022-01-21-10-53-29.png"
+      alt="estibordo" />
+    <div class="decor">{{barco.nome}}</div>
+
+    <table class="table-prancha">
+      <colgroup>
+        <col span="1" style="width: 5%" />
+        <col span="1" style="width: 12%" />
+        <col span="1" style="width: 12%" />
+        <col span="1" style="width: 12%" />
+        <col span="1" style="width: 12%" />
+        <col span="1" style="width: 12%" />
+        <col span="1" style="width: 12%" />
+        <col span="1" style="width: 12%" />
+        <col span="1" style="width: 12%" />
+      </colgroup>
+      <tr class="main">
+        <th></th>
+        <th></th>
+        <th>porão #1</th>
+        <th>porão #2</th>
+        <th>porão #3</th>
+        <th>porão #4</th>
+        <th>porão #5</th>
+        <th>porão #6</th>
+        <th>Somatório</th>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>Plano de descarga</td>
+        {{#each descargaPorao}}
+        <td>{{this}}</td>
         {{/each}}
-      </table>
-    </section>
-  </body>
+      </tr>
+      {{#each dadosPrancha}}
+      <tr class="dados">
+        {{{this}}}
+      </tr>
+      {{/each}}
+    </table>
+  </section>
+
+  <!-- Rateio -->
+
+  <section style="margin-bottom: 10px;">
+    <table class="table-rateio">
+      <colgroup>
+        <col span="1" style="width: 30%" />
+        <col span="1" style="width: 15%" />
+        <col span="1" style="width: 5%" />
+        <col span="1" style="width: 8%" />
+        <col span="1" style="width: 9%" />
+        <col span="1" style="width: 9%" />
+        <col span="1" style="width: 9%" />
+        <col span="1" style="width: 9%" />
+      </colgroup>
+      <tr class="main">
+        <th>Importador</th>
+        <th>Destino</th>
+        <th>Lote</th>
+        <th>Produto</th>
+        <th>Manifestado</th>
+        <th>Descarregado</th>
+        <th>Saldo</th>
+        <th>% Concluída</th>
+      </tr>
+      <tr class="break">
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td>B/L 1 coopavel cascavel 21/2163776-0</td>
+        <td>AZ. multitrans 1 432455</td>
+        <td>1</td>
+        <td>SSP</td>
+        <td>4.500,000</td>
+        <td>4.637,660</td>
+        <td class="positive">+137,660</td>
+        <td> 103,06%<div class="conclusao"></div>
+        </td>
+      </tr>
+      <tr class="sub rateioDevolver">
+        <td>B/L coopavel cascavel 21/2163776-0 (rateio a devolver)</td>
+        <td>COOPAVEL</td>
+        <td></td>
+        <td>SSP</td>
+        <td></td>
+        <td>-154,100</td>
+        <td>(154,100)</td>
+        <td></td>
+      </tr>
+      <tr class="sub varreduraRetirar">
+        <td>B/L coopavel cascavel 21/2163776-0 (varredura a retirar)</td>
+        <td>AZ.Rocha</td>
+        <td></td>
+        <td>Varredura</td>
+        <td></td>
+        <td>1,0200</td>
+        <td class="positive">+1,02</td>
+        <td></td>
+      </tr>
+      <tr class="break">
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="mainEmpresa">
+        <th colspan="4">TOTAL COOPAVEL</th>
+        <th>4.500,000</th>
+        <th>4.484,580</th>
+        <th>(15,420)</th>
+        <th>99,66%</th>
+      </tr>
+      <tr class="footer">
+        <td rowspan="2" colspan="2" class="totalOperacao" style="font-size: 12px; padding-left:105px;border-left: 0.5px solid black;">Total da Operacao:
+        </td>
+        <td colspan="2" style="border:0;">Manifestado:</td>
+        <td colspan="2" style="border:0;">Descarregado:</td>
+        <td colspan="1" style="border:0;">Saldo:</td>
+        <td colspan="1" style="border:0;">% concluida</td>
+      </tr>
+      <tr class="footer">
+        <td colspan="2"
+          style="background-color: white !important; border-bottom: 0.5px solid black;">
+          23.710,000</td>
+        <td colspan="2" style="background-color: white !important;border-bottom: 0.5px solid black;">23.628,720</td>
+        <td colspan="1" style="background-color: white !important;border-bottom: 0.5px solid black;">(81,280)</td>
+        <td colspan="1"
+          style="background-color: white !important;border-bottom: 0.5px solid black;border-right: 0.5px solid black;">
+          99,66%</td>
+      </tr>
+    </table>
+  </section >
+
+    <!-- Paralizacao -->
+
+  <section>
+    <table class="table-paralizacao">
+      <colgroup>
+        <col span="1" style="width: 4%" />
+        <col span="1" style="width: 4%" />
+        <col span="1" style="width: 4%" />
+        <col span="1" style="width: 4%" />
+        <col span="1" style="width: 20%" />
+        <col span="1" style="width: 8%" />
+        <col span="1" style="width: 20%" />
+        <col span="1" style="width: 9%" />
+        <col span="1" style="width: 8%" />
+      </colgroup>
+      <tr class="main">
+        <th colspan="3">Periodo de Paralizacao</th>
+        <th>Porao</th>
+        <th>Motivo da Paralizacao</th>
+        <th>Total</th>
+        <th>Resumo das Paralizacoes</th>
+        <th>Somatoria diaria</th>
+        <th>Horas acumuladas</th>
+      </tr>
+      <tr class="sub">
+        <td>7:00</td>
+        <td>às</td>
+        <td>7:30</td>
+        <td>4</td>
+        <td>Aguardando caminhoes</td>
+        <td>0:30:00</td>
+        <td>Aguardando TEFER</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Colocação de máquina</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Mudança de Porão</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Preparativos</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Retirada de máquina</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Parada obrigatória TPA</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Troca de período</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Aguardando abertura de porão</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>a</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Aguardando caminhões</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>a</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Aguardando draft</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Aguardando TPA</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Aguardando atracacao</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Aguardando Esteira Rocha</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Mudanca de Guindaste</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Defeito no funil</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Defeito no grab</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Defeito no guindaste de bordo</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Defeito no guindaste MHC</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Manutencao no guindaste</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Terno a disposicao</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Desconto APPA</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Preparativos Descarga Direta</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Chuva</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Defeito na balanca APPA</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Falta de energia eletrica na APPA</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Puxada do navio</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td>às</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Problemas no sistema APPA</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Aguardando 2 atracacao</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Feriado de natal</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Feriado de ano novo</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="sub">
+        <td colspan="5">Total do Dia</td>
+        <td colspan="1">2:15:00</td>
+        <td colspan="2">Total Acumulado</td>
+        <td colspan="1">2:15:00</td>
+      </tr>
+      <tr class="sub">
+        <td colspan="6">Equipamentos</td>
+        <td colspan="3">Observacoes</td>
+      </tr>
+     
+    </table>
+  </section>
+
+</body>
+
 </html>
