--- a/src/invoice.html
+++ b/src/invoice.html
@@ -251,94 +251,86 @@
         <th>Somatoria diaria</th>
         <th>Horas acumuladas</th>
       </tr>
-      <tr class="sub">
-        <td>7:00</td>
-        <td>às</td>
-        <td>7:30</td>
-        <td>4</td>
-        <td>Aguardando caminhoes</td>
-        <td>0:30:00</td>
-        <td>Aguardando TEFER</td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr class="sub">
-        <td></td>
-        <td>às</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>Colocação de máquina</td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr class="sub">
-        <td></td>
-        <td>às</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>Mudança de Porão</td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr class="sub">
-        <td></td>
-        <td>às</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>Preparativos</td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr class="sub">
-        <td></td>
-        <td>às</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>Retirada de máquina</td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr class="sub">
-        <td></td>
-        <td>às</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>Parada obrigatória TPA</td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr class="sub">
-        <td></td>
-        <td>às</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>Troca de período</td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr class="sub">
-        <td></td>
-        <td>às</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>Aguardando abertura de porão</td>
-        <td></td>
-        <td></td>
-      </tr>
+     
+       
+        <tr class="sub">
+          <td>7:00</td>
+          <td>às</td>
+          <td>7:30</td>
+          <td>4</td>
+          <td>Aguardando caminhoes</td>
+          <td>0:30:00</td>
+          <td  class="programado">Aguardando TEFER <span class="vertical">Programadas</span></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr class="sub">
+          <td></td>
+          <td>às</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td  class="programado">Colocação de máquina</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr class="sub">
+          <td></td>
+          <td>às</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td  class="programado">Mudança de Porão</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr class="sub">
+          <td></td>
+          <td>às</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td  class="programado">Preparativos</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr class="sub">
+          <td></td>
+          <td>às</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td  class="programado">Retirada de máquina</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr class="sub">
+          <td></td>
+          <td>às</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td  class="programado">Parada obrigatória TPA</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr class="sub">
+          <td></td>
+          <td>às</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td  class="programado">Troca de período</td>
+          <td></td>
+          <td></td>
+        </tr>
+
       <tr class="sub">
         <td></td>
         <td>às</td>
@@ -346,7 +338,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>a</td>
+        <td  class="naoProgramado">Aguardando abertura de porão <span class="vertical">Nao Programadas</span></td>
         <td></td>
         <td></td>
       </tr>
@@ -357,7 +349,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Aguardando caminhões</td>
+        <td  class="naoProgramado">Aguardando caminhões</td>
         <td></td>
         <td></td>
       </tr>
@@ -368,7 +360,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>a</td>
+        <td  class="naoProgramado">Aguardando draft</td>
         <td></td>
         <td></td>
       </tr>
@@ -379,7 +371,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Aguardando draft</td>
+        <td  class="naoProgramado">Aguardando TPA</td>
         <td></td>
         <td></td>
       </tr>
@@ -390,7 +382,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Aguardando TPA</td>
+        <td  class="naoProgramado">Aguardando atracacao</td>
         <td></td>
         <td></td>
       </tr>
@@ -401,7 +393,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Aguardando atracacao</td>
+        <td  class="naoProgramado">Aguardando Esteira Rocha</td>
         <td></td>
         <td></td>
       </tr>
@@ -412,7 +404,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Aguardando Esteira Rocha</td>
+        <td  class="naoProgramado">Mudanca de Guindaste</td>
         <td></td>
         <td></td>
       </tr>
@@ -423,7 +415,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Mudanca de Guindaste</td>
+        <td  class="naoProgramado">Defeito no funil</td>
         <td></td>
         <td></td>
       </tr>
@@ -434,7 +426,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Defeito no funil</td>
+        <td  class="naoProgramado">Defeito no grab</td>
         <td></td>
         <td></td>
       </tr>
@@ -445,7 +437,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Defeito no grab</td>
+        <td  class="naoProgramado">Defeito no guindaste de bordo</td>
         <td></td>
         <td></td>
       </tr>
@@ -456,7 +448,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Defeito no guindaste de bordo</td>
+        <td  class="naoProgramado">Defeito no guindaste MHC</td>
         <td></td>
         <td></td>
       </tr>
@@ -467,7 +459,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Defeito no guindaste MHC</td>
+        <td  class="naoProgramado">Manutencao no guindaste</td>
         <td></td>
         <td></td>
       </tr>
@@ -478,7 +470,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Manutencao no guindaste</td>
+        <td  class="naoProgramado">Terno a disposicao</td>
         <td></td>
         <td></td>
       </tr>
@@ -489,7 +481,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Terno a disposicao</td>
+        <td  class="expurgado">Desconto APPA <span class="vertical">Expugadas</span></td>
         <td></td>
         <td></td>
       </tr>
@@ -500,7 +492,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Desconto APPA</td>
+        <td  class="expurgado">Preparativos Descarga Direta</td>
         <td></td>
         <td></td>
       </tr>
@@ -511,7 +503,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Preparativos Descarga Direta</td>
+        <td  class="expurgado">Chuva</td>
         <td></td>
         <td></td>
       </tr>
@@ -522,7 +514,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Chuva</td>
+        <td  class="expurgado">Defeito na balanca APPA</td>
         <td></td>
         <td></td>
       </tr>
@@ -533,7 +525,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Defeito na balanca APPA</td>
+        <td  class="expurgado">Falta de energia eletrica na APPA</td>
         <td></td>
         <td></td>
       </tr>
@@ -544,7 +536,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Falta de energia eletrica na APPA</td>
+        <td  class="expurgado">Puxada do navio</td>
         <td></td>
         <td></td>
       </tr>
@@ -555,18 +547,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Puxada do navio</td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr class="sub">
-        <td></td>
-        <td>às</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>Problemas no sistema APPA</td>
+        <td  class="expurgado">Problemas no sistema APPA</td>
         <td></td>
         <td></td>
       </tr>
@@ -577,7 +558,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Aguardando 2 atracacao</td>
+        <td  class="expurgado">Aguardando 2 atracacao</td>
         <td></td>
         <td></td>
       </tr>
@@ -588,7 +569,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Feriado de natal</td>
+        <td  class="expurgado">Feriado de natal</td>
         <td></td>
         <td></td>
       </tr>
@@ -599,13 +580,13 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Feriado de ano novo</td>
+        <td  class="expurgado">Feriado de ano novo</td>
         <td></td>
         <td></td>
       </tr>
       <tr class="sub">
         <td colspan="5">Total do Dia</td>
-        <td colspan="1">2:15:00</td>
+        <td colspan="1" style=" background-color: #fc9903;">2:15:00</td>
         <td colspan="2">Total Acumulado</td>
         <td colspan="1">2:15:00</td>
       </tr>
